# arc-undead-custom

./: AUTHORS  HACKING.md  PKGBUILD  README.md  arc-theme-upgrade  configure.ac  gtk.css  index.theme  install.sh
common/: Makefile.am
common/gtk-2.0/: gtkrc  render-assets.sh
common/gtk-3.0/3.20/: gtk-dark.css  gtk-darker.css  gtk-solid-darker.css  gtk-solid.css  gtk.css  render-assets.sh
common/gtk-3.0/3.20/sass/: _colors.scss  _common.scss
gtk2/: gtkrc
gtk3/: dark-assets.txt  gtk.css  render-assets.sh
